2002-07-18  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitStatement): Fix case of infinite do-while
	loop emitting dead code - bug 3085.
	* src/expr.cpp (ProcessMethodName): Fix handling of non-inherited
	enclosing instance methods in explicit constructors - bug 3082.
	(CreateAccessToType): Fix access of non-inherited members.
	* src/symbol.cpp (GetReadAccessMethod): More fixes of X.super.m(),
	detected by bug 246.
	* src/depend.cpp (ProcessSubtypes):
	* src/error.cpp (CIRCULAR_*):
	* src/getclass.cpp (ProcessClassFile):
	* src/decl.cpp: Fix handling of cyclic inheritance - bug 338.
	(AddInheritedMethods): Make warning become pedantic.
	* src/semantic.h: Improve some documentation, as well as redo
	methods involved in cyclic inheritance changes.

2002-07-15  Mo DeJong  <supermo@bayarea.net>

	* configure: Regen.
	* configure.in: Set CXXFLAGS when compiling
	with VC++. This gets us closer to being able
	to compile with VC++, but does not yet work.
	An autoconf patch will be required since
	VC++ thinks .cc files are object files.

2002-07-12  Mo DeJong  <supermo@bayarea.net>

	* configure: Regen.
	* configure.in: Define HAVE_ENCODING if iconv or icu is supported.
	* src/config.h.in: Regen.
	* src/jikes.cpp:
	* src/option.cpp:
	* src/stream.cpp:
	* src/stream.h: Replace HAVE_LIBICU_UC || HAVE_ICONV_H
	checks with HAVE_ENCODING check.

2002-07-12  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitTryStatement): Fix case with empty try
	statement - bug 3071.
	(EmitStatement): Fix case with empty if clause - bug 3076.
	(EmitBinaryExpression): Fix case with mixed-type addition and
	subtraction with constant 0 on left - bug 3078.
	(EmitSwitchStatement, DefineLabel): Fix case with infinite loop
	caused by if() continue; - bug 3077.
	* src/symbol.cpp (GetReadAccessMethod): Fix case with X.super.m()
	in an accessor method - bug 169.

2002-07-11  Chris Abbey  <jikes@cabbey.net>

	* configure.in: redefine version number to differentiate